fix: remove transform cutting off buttons + capitalize Prev

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -218,7 +218,6 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    transform: translateY(50%);
     width: 100%;
     display: flex;
     justify-content: center;
